<resources>
    <string name="app_name" translatable="false">GoShopping</string>
    <string name="title_shoppinglist">Shopping List</string>
    <string name="title_cardlist">Loyalty Cards</string>
    <string name="title_activity_settings">Settings</string>
    <string name="place_search_activity_label">Stores Search</string>
    <string name="new_card_activity_label">New Loyalty Card</string>
    <string name="edit_card_activity_label">Edit Loyalty Card</string>


    <string name="settings">Settings</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>

    <string name="barcode_display_error">Barcode could not be generated for this card. Try to scan it using camera</string>
    <string name="barcode_display_description">Barcode generated image</string>
    <string name="barcode_input_hint">Card number</string>
    <string name="camera_scan_btn_description">Camera scan button</string>
    <string name="card_name_input_hint">Card Name</string>
    <string name="card_color_input_hint">Card Color</string>
    <string name="remove_card">Remove Card</string>
    <string name="place_search_main_hint">Use the bar above to search. Click on the store you want to add to your In-Store Notification</string>
    <string name="add_card_fab_description">Add new card</string>
    <string name="edit_card_fab_description">Edit card</string>
    <string name="shopping_item_input_hint">Enter new ingredient…</string>
    <string name="share_shopping_list">Share shopping list</string>

    <string name="search">Search</string>
    <string name="share_shopping_list_intro_text">This is my shopping list</string>
    <string name="share_empty_list_info">Your shopping list is empty</string>
    <string name="edit_card_color_load_error">An error occurred loading color. Please, select color manually</string>
    <string name="remove_card_confirm_message">Are you sure you want to remove the card</string>
    <string name="camera_scan_flash_hint">Volume up to flash on</string>
    <string name="search_place_hint">Search a store</string>
    <string name="error_occurred_retry">An error occurred, try again</string>
    <string name="add_place_dialog_title">Do you want to add it to your places?</string>
    <string name="place_limit_reached_dialog_title">Limit reached</string>
    <string name="place_limit_reached_dialog_message">You already have 10 stores, remove one to add this</string>
    <string name="about_dialog_message">This app was made entirely by Fabrizio Cau, as a didactic project for SAM course @ University of Pisa</string>

    <string name="active_places">Active places</string>
    <string name="place_remove_confirm_dialog_title">Confirm removal</string>
    <string name="place_remove_confirm_dialog_message_intro">Are you sure you want to remove</string>

    <!-- Request permission messages  -->
    <string name="allow_notification_from_settings_message">Go to Settings and enable notification</string>
    <string name="allow_background_position_from_settings_message">Go to Settings, Click on Permissions, then Position and click on \'Allow all the time\'</string>
    <string name="permissions_must_be_allowed_message">You need to gran requested permissions to make sure In-Store Notification feature works</string>
    <string name="request_permission_title">Permission requested</string>
    <string name="next_click_allow_always_permission_message">On the next screen click on \'Allow all the time\'</string>
    <string name="place_search_permission_request">In-Store Notification need to access phone location in background to work. Please click on \'Allow all the time\'</string>
    <!-- Notifications -->
    <string name="notification_channel_name">In-Store Notification</string>
    <string name="notification_channel_description">Enable this channel to receive notification with top items of your list when you are shopping in your favourite stores</string>
    <string name="notification_channel_id" translatable="false">GoShoppingMainId</string>
    <string name="notification_title" >Your shopping list</string>
    <string name="notification_sub_title">Top items from your list</string>
    <!-- Preference -->
    <string name="theme_entry_light">Light</string>
    <string name="theme_entry_dark">Dark</string>
    <string name="theme_entry_systems">System\'s theme</string>
    <string name="preference_order_card_by">Sort cards by used times</string>
    <string name="preference_cards_span">Cards per row</string>
    <string name="preference_shopping_items_span">Shopping items per row</string>
    <string name="preference_appearance">Appearance</string>
    <string name="preference_about">About</string>
    <string name="preference_enable_geofencing">Enable</string>
    <string name="preference_add_place">Add new place</string>
    <string name="preference_enable_geofencing_summary_on">In-Store Notification is enabled</string>
    <string name="preference_enable_geofencing_summary_off">In-Store Notification is disabled</string>
    <string name="preference_add_place_summary">You can add up to 10 places</string>
    <string name="preference_order_card_by_summary_on">Card list will be sorted by used times</string>
    <string name="preference_order_card_by_summary_off">Card list will be sorted according to the time they were entered</string>
    <string name="preference_grant_permissions">Grant permissions</string>
    <string name="preference_grant_permissions_summary">Some permissions have not been granted yet</string>
    <string name="preference_geofencing_summary">This feature allows you to receive a notification containng the top items of your shopping list whenever you go shopping in your trusted store</string>
    <string name="preference_geofencing_header">In-Store Notification</string>
    <string name="preference_geofencing_note">NOTE: due to power saving policies, some devices might limit this feature, and because of that notification might not be prompt</string>
    <!--  -->
</resources>