<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="it.unipi.di.sam.goshopping.SettingsActivity$GeofencingFragment"
        app:icon="@drawable/ic_baseline_place_24"
        app:iconSpaceReserved="false"
        app:key="geofencing_header"
        app:title="@string/preference_geofencing_header"
        app:summary="@string/preference_geofencing_summary"/>

    <SwitchPreference
        app:key="order_by_used_times"
        app:persistent="true"
        app:title="@string/preference_order_card_by"
        app:summaryOn="@string/preference_order_card_by_summary_on"
        app:summaryOff="@string/preference_order_card_by_summary_off"
        app:icon="@drawable/ic_baseline_format_list_numbered_24"/>

    <ListPreference
        app:key="card_list_span_count"
        app:title="@string/preference_cards_span"
        app:icon="@drawable/ic_baseline_view_list_24"
        app:useSimpleSummaryProvider="true"
        app:entries="@array/grid_entries"
        app:entryValues="@array/grid_values"
        app:defaultValue="1"/>

    <ListPreference
        app:key="shopping_list_span_count"
        app:title="@string/preference_shopping_items_span"
        app:icon="@drawable/ic_baseline_view_list_24"
        app:useSimpleSummaryProvider="true"
        app:entries="@array/grid_entries"
        app:entryValues="@array/grid_values"
        app:defaultValue="1"/>

    <ListPreference
        app:key="theme_preference"
        app:title="@string/preference_appearance"
        app:persistent="true"
        app:icon="@drawable/ic_baseline_palette_24"
        app:defaultValue="systems"
        app:entries="@array/theme_entries"
        app:entryValues="@array/theme_values"
        app:useSimpleSummaryProvider="true"/>


    <Preference
        app:key="info_preference"
        app:icon="@drawable/ic_baseline_info_24"
        app:title="@string/preference_about"/>


</PreferenceScreen>