<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mBackground">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.cardlist.NewCardActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barcode_ll"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/rounded_card_bg" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:gravity="center_horizontal"
            android:textColor="#868686"
            android:text="@string/barcode_display_error"
            app:layout_constraintTop_toTopOf="@id/barcode_preview_image"
            app:layout_constraintBottom_toBottomOf="@id/barcode_preview_image"/>

        <ImageView
            android:id="@+id/barcode_preview_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            android:contentDescription="@string/barcode_display_description"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/barcode_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/barcode_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:textColor="#FF121212"
            android:letterSpacing="0.3"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/new_card_code"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barcode_input_hint" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_textinput_bg"
        android:backgroundTint="@color/new_card_input"
        app:layout_constraintTop_toBottomOf="@+id/new_card_code" >



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_card_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="55dp"
            android:background="#00FFFFFF"
            android:textColor="@color/sl_item_text"
            android:inputType="number"
            android:maxLength="48"
            android:maxLines="1"
            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toStartOf="@id/scan_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/scan_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            android:elevation="6dp"
            android:background="@drawable/ic_baseline_photo_camera_24"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/camera_scan_btn_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/card_name_hint"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_name_input_hint"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/card_name"
        android:inputType="textCapSentences"
        android:maxLength="20"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_textinput_bg"
        android:backgroundTint="@color/new_card_input"
        app:layout_constraintTop_toBottomOf="@+id/card_name_hint" />

    <TextView
        android:id="@+id/card_color_hint"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_color_input_hint"/>


        <RadioGroup
            android:id="@+id/color_radio_group"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="2dp"
            android:padding="5dp"
            android:background="@drawable/rounded_textinput_bg"
            android:backgroundTint="@color/new_card_input"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/color_white"
                style="@style/CardColorRadioButton"
                android:checked="true"
                android:tag="#FFFFFF"
                android:buttonTint="#FFFFFF"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/color_red"
                style="@style/CardColorRadioButton"
                android:tag="#E30713"
                android:buttonTint="#E30713"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/color_orange"
                style="@style/CardColorRadioButton"
                android:tag="#F4511E"
                android:buttonTint="#F4511E"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/color_green"
                style="@style/CardColorRadioButton"
                android:tag="#34B23A"
                android:buttonTint="#34B23A"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/color_blue"
                style="@style/CardColorRadioButton"
                android:tag="#3E92BF"
                android:buttonTint="#3E92BF"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/color_black"
                style="@style/CardColorRadioButton"
                android:tag="#000000"
                android:buttonTint="#000000"/>

        </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/card_name">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancel_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/add_card_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:enabled="false"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/rem_card_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/remove_card"/>

</LinearLayout>
    </ScrollView>