<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cardlist.CLFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardlist_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mBackground"
        android:clipToPadding="false"
        android:paddingHorizontal="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_card_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_add_white_vector"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_card_fab_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_card_fab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/edit_card_fab_description" />

    <View
        android:id="@+id/show_card_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlayColor"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>


    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:id="@+id/show_card_cl"
        app:cardCornerRadius="5dp"
        android:elevation="10dp"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_min="300dp"
        android:visibility="invisible"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardlist_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/show_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:maxLines="1"
                android:textColor="#FF121212"
                android:textAlignment="center"
                android:textSize="27sp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_card_bg"
                android:backgroundTint="#FFFFFFFF">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:paddingHorizontal="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="#868686"
                    android:text="@string/barcode_display_error"
                    app:layout_constraintTop_toTopOf="@id/barcode_image"
                    app:layout_constraintBottom_toBottomOf="@id/barcode_image"/>

                <ImageView
                    android:id="@+id/barcode_image"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:contentDescription="@string/barcode_display_description"
                    app:layout_constraintBottom_toTopOf="@id/barcode_text"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/barcode_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#FF121212"
                    android:gravity="center_horizontal"
                    android:letterSpacing="0.3"
                    android:maxLines="1"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/barcode_image"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
